# Cyper-Spouse

./: .gitignore  CONTEXT.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
configs/: character.yaml  civitai-krea2-celia-realism-template.json  mechanism_closure.yaml  media_address_templates.yaml  media_camera_templates.yaml  media_embodiment_templates.yaml  media_facial_performance_templates.yaml  media_interaction_templates.yaml  media_moment_templates.yaml  media_photographic_authenticity_templates.yaml  media_shot_templates.yaml  media_subject_templates.yaml  media_suggestive_private_templates.yaml  napcat-onebot.example.json  stickers.yaml  visual_identity.yaml  world_seed.yaml
docs/: affective-advisory-and-drive-arbitration.md  architecture.md  bare-full-performance-baseline.md  celia-v2-lora-training.md  companion-mechanism-catalog.md  cost-control.md  current-state.md  dashboard-ai-asset-template.md  dashboard-room-full-asset-atomization-plan.md  dashboard-room-refactor-plan.md  dashboard-scene-engine.md  dashboard-visual-worklog.md  dynamic-loop-design.md  emotion-fidelity-remediation-plan.md  experience-evaluation.md  girl-agent-world-runtime-handoff.md  godot-home-migration.md  legacy-behavior-runtime-inventory.md  legacy-design-disposition.md  mechanism-audit-and-loop-plan.md  media-machine.md  model-led-inner-life-turn-architecture.md  napcat-setup.md  personality-agency-hard-gate-audit.md  roadmap.md  state-machine.md  system-blueprint.md  virtual-companion-evolution-backlog.md  visual-home-roadmap.md  visual-identity.md  world-conversation-experience-remediation-loop.md  world-conversation-human-likeness-loop.md  world-human-feel-emotion-injection-iteration.md  world-kernel.md  world-negative-affect-plan.md  world-relationship-stage-plan.md  world-runtime-experience-test-remediation-plan.md  world-runtime-repair-plan.md  world-runtime-status.md  world-v2-refactor-plan.md
godot/: README.md  project.godot
launchd/: com.girl-agent.daemon.plist  com.girl-agent.local-appraisal-watchdog.plist  com.girl-agent.local-appraisal.plist  com.girl-agent.napcat.plist  com.girl-agent.proactive.plist  com.girl-agent.qq-ws.plist  com.girl-agent.sillytavern.plist
scripts/: audit_world_memory_runtime.py  build_dashboard_occluders.py  build_dashboard_room.py  build_tile_room.py  capture_godot_room.py  crop_sticker_sheet.py  evaluate_celia_v3_cuda.cmd  evaluate_celia_v3_scales.cmd  evaluate_celia_v3_v2_clean_600.cmd  install_launchd.sh  install_pytorch_cuda.ps1  install_pytorch_cuda_remote.cmd  local_appraisal_watchdog.sh  monitor_celia_v3_training.ps1  offline_attention_timing_audit.py  offline_fact_extraction_audit.py  offline_relationship_draft_audit.py  patch_napcat_qq_hotupdate.sh  probe_celia_v3_text_encoder.cmd  provision_world_v2_media_authority.py  provision_world_v2_perception_authority.py  (+30 more)
(+1014 files in other folders)
